<resources>
    <string name="app_name">globoesporte.com</string>
    <string name="title_home">início</string>
    <string name="title_my_team">meu time</string>
    <string name="title_calendar">agenda</string>
    <string name="title_table">tabelas</string>
    <string name="title_interatividade">interativo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
